# Ship-Sandbox

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  main.cpp  material.cpp  phys.cpp  phys.h  render.cpp  util.h  vcpkg.json
renderer2/: CMakeLists.txt
renderer2/src/: main.cpp
renderer2/src/renderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  buffers.cpp  buffers.hpp  debug.cpp  debug.hpp
renderer2/src/util/: stringable.cpp  stringable.hpp
renderer2/test/: main.cpp
run/data/: materials.json
run/data/view/: main.rml  main.xml
src/: GameElement.cpp  GameElement.hpp  ShipSandbox.cpp  ShipSandbox.hpp  game.cpp  game.h  game.hpp  main.cpp  material.cpp  material.h  material.hpp  phys.cpp  phys.h  render.cpp  render.hpp  scheduler.cpp  scheduler.h  util.cpp  util.h  vec.cpp  vec.hpp
src/ImBackend/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp
src/RmlBackend/: RmlUi_Include_Windows.h  RmlUi_Platform_GLFW.cpp  RmlUi_Platform_GLFW.h  RmlUi_Renderer_GL2.cpp  RmlUi_Renderer_GL2.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h
src/renderer/: Renderer.cpp  Renderer.hpp  buffers.cpp  buffers.hpp  debug.cpp  debug.hpp
src/util/: util.cpp  util.hpp  vec.cpp
